--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "ICTAK Trainee Management",
+  "engines": {
+        "node": "16.13.0"
+  }
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
