--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "ICTAK Trainee Management",
-  "engines": {
-        "node": "16.13.0"
-  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "cd React UI && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "cd REACT UI && npm install --only=dev && npm install && npm run build"
   },
   "author": "Jithin Jeevan",
   "license": "ISC",
